NEWS file for Transmission <http://www.transmissionbt.com/>

1.60 (2009/mm/dd)
<http://trac.transmissionbt.com/query?milestone=1.60&group=component&groupdesc=1&order=severity>
- All Platforms
   + Random port, with optional randomization on startup
   + Transfer prioritization
   + Option for transfers to specify if they are included in the global bandwidth limits
- Mac
   + Requires Mac OS X 10.5 Leopard or newer
   + Groups (moved to preferences) can be auto-assigned to transfers when adding based on multiple criteria
   + Groups can have a default location when adding transfers
   + The speed limit scheduler can now be applied to only specific days
   + Bonjour support for the web interface
   + File filter field in the inspector
   + Option to include beta releases when auto-updating (using modified Sparkle 1.5)
- GTK+
   + Speed Limit: Second set of bandwidth limits that can be toggled or scheduled
   + Show the file icon in the list
   + Allow sorting of the torrent list by size and by ETA
- Qt
   + New beta Qt client
- Daemon
   + Watch folder for auto-adding torrents
- Web Client 
   + File selection and prioritization
   + Fix "Remove Data" bug

1.52 (2009/04/12)
<http://trac.transmissionbt.com/query?milestone=1.52&group=component&groupdesc=1&order=severity>
- Mac
   + Improve interface responsiveness when downloading
- GTK+ and Daemon
   + Always honor the XDG setting for the download directory
- GTK+
   + Fix formatting error when showing speeds measured in MB/s
   + Fix bug that caused some scheduled speed limit time settings to be lost
   + Use the new blocklist URL when updating the blocklist
- Web Client
   + On the server, better filtering of bad URLs
   + On the server, faster json serialization
   + Fix minor web client 301 redirect error
   + Better Internet Explorer support

1.51 (2009/02/26)
<http://trac.transmissionbt.com/query?milestone=1.51&group=component&groupdesc=1&order=severity>
- All Platforms